[tool.poetry]
name = "diablogical"
version = "0.1.0"
description = ""
authors = ["Robby <h0rv@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
requests = "^2.31.0"
trafilatura = "^1.8.0"
jinja2 = "^3.1.3"
plyvel = "^1.5.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
